:zap: GENERAL UPDATE :: Adding dark mode and fix some detail with radio button in dark mode

--- a/src/components/RadioButton/styles.scss
+++ b/src/components/RadioButton/styles.scss
@@ -20,7 +20,6 @@
   .vz-radio-button {
     .form-check-input {
       &:checked {
-        background-color: $main-green !important;
         border-color: $light-gray-color !important;
         background-image: var(--cui-form-check-radio-checked-bg-image, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3.45' fill='rgb(182, 219, 27)'/%3e%3c/svg%3e")) !important;
       }
